Adding form styling and functionality

--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -11,7 +11,7 @@
 // @import "nautilus/dependencies/rouge/thankfuleyes";
 
 // Library: SimpleSelect (http://pioul.fr/jquery-simpleselect)
-// @import "nautilus/libs/simpleselect/2.0.0/simpleselect";
+@import "nautilus/libs/simpleselect/2.0.0/simpleselect";
 
 // Library: slick (http://kenwheeler.github.io/slick/)
 // @import "nautilus/libs/slick/1.3.13/slick";
@@ -20,143 +20,129 @@
 @import "components/development";
 
 html {
-  background-color: #f2f3f4;
-  color: #423732;
-  font-size:18px;
-  line-height:1.75;
-}
+  background-image:url('/images/logo_x_pattern.png');
 
-.header {
-  @include position(fixed, null null null null);
-  @include size(100% null);
-  z-index: 1;
-}
-
-.main {
-  background-color: #f2f3f4;
-  @include padding(null null 10em null);
-}
-
-.layout {
-  @include ⌂-container;
-}
-
-h1 {
-  color: $color-yellowSunglow;
-  font-size: 4em;
-}
-
-h2 {
-  color: $color-yellowSunglow;
-  font-size: 2.5em;
-  @include margin(.5em null .5em null);
-}
-
-h3 {
-  color: $color-yellowSunglow;
-  font-size: 1.5em;
-  @include margin(.5em null .5em null);
-}
-
-pre {
-  background-color: #272822;
-  @include padding(1em null 1em null);
-  @include margin(1em null 2em null);
-  font-size: 15px;
-  line-height:1.25;
-}
-
-blockquote {
-  font-size: 1.5em;
-}
-
-a {
-  border-bottom:1px dashed $color-yellowSunglow;
-}
-
-p {
-  @include margin(null null 1em null);
-}
-
-.toggle {
-
-  &.toggle--navigation {
-
-    @include position(fixed, 1em 1em null null);
-
-    &:after {
-      @include ⌂-icon(menu, 26, $color-yellowSunglow);
-    }
-
-    @include ⌂-pattern("toggle", "left");
+  &:after {
+    content:'';
+    @include ⌂-background(#E51B24, .75);
+    @include position(fixed, 0 0 0 0);
+    @include size(100% 100%);
   }
 }
 
-@include ⌂-pattern("navigation", "revealRight");
+.form {
 
-.navigation {
+  &.form--plusone {
+    @include position(relative, null null null null);
+    @include ⌂-layer(roof);
+    @include margin(5em null 5em null);
 
-  &.navigation--primary {
-    font-size: 15px;
-    line-height: 1.25;
-    overflow-y: scroll;
-
-    .navigation__inner {
+    .form__inner {
+      @include ⌂-container;
+    }
+    
+    .form__heading {
+      font-size: 4em;
+      color: white;
     }
 
-    .navigation__link {
+    .form__copy {
+      font-size: 1.5em;
+      color: white;
+
+      p {
+        @include margin(null null 1em null);
+      }
+
+      a {
+        color: white;
+        border-bottom: 1px dashed white;
+      }
+    }
+
+    .form__message {
+      color: white;
+      text-align: center;
+      border: 1px dotted white;
+      font-size: 1.5rem;
+      @include transition(all, 500ms, $ease-in-out-quad);
+      opacity:0;
+      max-height:0;
+      overflow:hidden;
+      @include padding(1em 1em 1em 1em);
+      font-style:italic;
+
+      &:target {
+        opacity:1;
+        max-height:100px;
+      }
+    }
+
+    .form__field {
+      @include margin(null null 1em null);
+    }
+
+    .form__input {
+      
+      &.form__input--textarea {
+        @include size(100% 5em);
+        @include padding(.5em .5em .5em .5em);
+        font-size: 1.5rem;
+        font-weight: 300;
+        color: #666;
+      }
+    }
+
+    .form__label {
+      color: white;
       font-weight: bold;
+      font-size: 1.25rem;
+      @include margin(null null .5em null);
+      display: block;
     }
 
-    .navigation__item {
+    .form__submit {
+      background: #E51B24;
+      text-transform: uppercase;
+      color: white;
+      @include size(100% null);
+      @include margin(1rem null null null);
+      @include padding(1rem null 1rem null);
+      @include transition(all, 200ms $ease-in-out-quad);
 
       &:hover {
-
-        .navigation__copy {
-          color: $color-white;
-        }
-      }
-    }
-
-    .navigation__link {
-      border: none;
-
-      &:hover {
-
-        .navigation__copy {
-          color: $color-yellowSunglow;
-        }
+        background: lighten(#E51B24, 5%);
+        font-size: 2rem;
       }
     }
   }
 }
 
-.subnavigation {
+.simpleselect {
+  @include size(100% auto);
+  @include box-sizing(border-box);
 
-  .subnavigation__copy {
-    color: $color-white;
+  & * {
+    @include box-sizing(border-box);
   }
 
-  .subnavigation__link {
-    border: none;
+  .placeholder {
+    @include size(100% null);
+    font-size: 1.5rem;
+    @include padding(.5em null .5em null);
+    line-height:1.5;
+    border-radius: 0;
+  }
 
-    &:hover {
+  .options {
+    @include size(100% null);
+    border-radius: 0;
 
-      .subnavigation__copy {
-        color: $color-yellowSunglow;
-      }
+    .option {
+      font-size: 1.5rem;
+      @include padding(.5em null .5em null);
+      line-height:1.5;
+      border-radius: 0;
     }
   }
-
-  .subnavigation__item {
-    @include padding(.5em 1em .5em 1.5em);
-  }
-}
-
-strong {
-  font-weight: bold;
-}
-
-em {
-  font-style: italic;
 }
