--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -4,60 +4,74 @@ layout_class: basic-page
 ---
 
 <section class="form form--plusone">
-  <div class="form__content">
-    <h3 class="form__heading"></h3>
-    <p class="form__copy"></h3>
+  <div class="form__inner">
+    <div class="form__content">
+      <h3 class="form__heading">Plus One</h3>
+      <div class="form__copy">
+        <p>
+        Did somebody go above and beyond?  Did somebody make your day a little brighter by stepping up and helping out?  Did somebody wear more than the <a href="https://vimeo.com/102830089" target="_blank">minimum number of pieces of flair</a>?
+        </p>
+        <p>
+        Well don't just sit there, give 'em some love!  Use this form to tell the company what they did and why they should be recognized.
+        </p>
+      </div>
+    </div>
+    <div class="form__message" id="thanks">
+      Awesome!  Feeling generous?  Go ahead, give another one...
+    </div>
+    <form accept-charset="UTF-8" action="https://formkeep.com/f/7fb87f73b89e" method="POST">
+      <fieldset class="form__fieldset">
+        <div class="form__field">
+          <input type="hidden" name="utf8" value="✓">
+        </div>
+      </fieldset>
+      <fieldset class="form__fieldset">
+        <div class="form__field">
+          <label class="form__label">Who?</label>
+          <select class="form__input form__input--select" name="who">
+            <option>Wanda Aquino</option>
+            <option>Casey Arnold</option>
+            <option>Scott Berkley</option>
+            <option>Sean Cunningham</option>
+            <option>Jesse Day</option>
+            <option>Alexis Devilling</option>
+            <option>Rob Fitzgibbon</option>
+            <option>Stacey Forman</option>
+            <option>Nick Goodman</option>
+            <option>Emily Greenwood</option>
+            <option>Erin Hegarty</option>
+            <option>Liz Leclair</option>
+            <option>Adam Patterson</option>
+            <option>Gordon Plutsky</option>
+            <option>Alec Schidlovsky</option>
+            <option>Jane Tryder</option>
+            <option>Elli Vandegrift</option>
+            <option>Jesse Vuona</option>
+            <option>Andrew Wardwell</option>
+            <option>Stephen Webster</option>
+            <option>Matthew White</option>
+            <option>Nate Wolfson</option>
+            <option>Jeff Zaccagnini</option>
+            <option>Sierra Zatsky</option>
+          </select>
+        </div>
+        <div class="form__field">
+          <label class="form__label">What?</label>
+          <select class="form__input form__input--select" name="what">
+            <option>Putting the Team First</option>
+            <option>Delivering +1 Internally and Externally</option>
+            <option>Finding the Smartest Solution</option>
+            <option>Embracing the Challenge</option>
+          </select>
+        </div>
+        <div class="form__field">
+          <label class="form__label">Why?</label>
+          <textarea class="form__input form__input--textarea" name="why"></textarea>
+        </div>
+      </fieldset>
+      <fieldset class="form__fieldset">
+      <button class="form__submit" type="submit">Give 'em + 1</button>
+      </fieldset>
+    </form>
   </div>
-  <form accept-charset="UTF-8" action="https://formkeep.com/f/7fb87f73b89e" method="POST">
-    <fieldset class="form__fieldset">
-      <div class="form__field">
-        <input type="hidden" name="utf8" value="✓">
-      </div>
-    </fieldset>
-    <fieldset class="form__fieldset">
-      <div class="form__field">
-        <select class="form__input form__input--select" name="who">
-          <option>Wanda Aquino</option>
-          <option>Casey Arnold</option>
-          <option>Scott Berkley</option>
-          <option>Sean Cunningham</option>
-          <option>Jesse Day</option>
-          <option>Alexis Devilling</option>
-          <option>Rob Fitzgibbon</option>
-          <option>Stacey Forman</option>
-          <option>Nick Goodman</option>
-          <option>Emily Greenwood</option>
-          <option>Erin Hegarty</option>
-          <option>Liz Leclair</option>
-          <option>Adam Patterson</option>
-          <option>Gordon Plutsky</option>
-          <option>Alec Schidlovsky</option>
-          <option>Jane Tryder</option>
-          <option>Elli Vandegrift</option>
-          <option>Jesse Vuona</option>
-          <option>Andrew Wardwell</option>
-          <option>Stephen Webster</option>
-          <option>Matthew White</option>
-          <option>Nate Wolfson</option>
-          <option>Jeff Zaccagnini</option>
-          <option>Sierra Zatsky</option>
-        </select>
-      </div>
-      <div class="form__field">
-        <select class="form__input form__input--select" name="what">
-          <option>Putting the Team First</option>
-          <option>Delivering +1 Internally and Externally</option>
-          <option>Finding the Smartest Solution</option>
-          <option>Embracing the Challenge</option>
-        </select>
-      </div>
-      <div class="form__field">
-        <textarea class="form__input form__input--textarea" name="why">
-        </textarea>
-      </div>
-    </fieldset>
-    <fieldset class="form__fieldset">
-      <button class="form__submit" type="submit">+ 1</button>
-    </fieldset>
-  </form>
 </section>
