--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -29,13 +29,13 @@
 
         <%! partial "components/toggle--search" %>
 
-        <%= partial "components/toggle--navigation" %>
+        <%! partial "components/toggle--navigation" %>
 
       </div>
 
     </header>
 
-    <%= partial "components/navigation--primary" %>
+    <%! partial "components/navigation--primary" %>
 
     <%= yield %>
 
