Adding link to dashboard

--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -14,6 +14,9 @@ layout_class: basic-page
         <p>
         Well don't just sit there, give 'em some love!  Use this form to tell the company what they did and why they should be recognized.
         </p>
+        <p style="text-align: center;">
+          <a href="/dashboard">Checkout the +1s!</a>
+        </p>
       </div>
     </div>
     <div class="form__message" id="thanks">
